--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lobe-page",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,6 +16,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "prop-types": "^15.8.1",
     "standard": "^17.0.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
